# task-xromzo

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  postman_collection.json
app/: Dockerfile  app.py  config.py  pyproject.toml  requirements.txt  schema.py  start.sh
app/object/: objectmgr.py
app/tests/: test_app.py  test_graphql.py  test_objectmgr.py
nginx/: Dockerfile
nginx/sites/: app.conf
