[tool.poetry]
name = "object mgr"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
aniso8601 = "9.0.1"
blinker = "1.6.2"
click = "8.1.6"
exceptiongroup = "1.1.2"
flask = "2.3.2"
gevent = "23.7.0"
graphene = "3.3"
graphql-core = "3.2.3"
graphql-relay = "3.2.0"
graphql-server = "3.0.0b6"
graphql-server-core = "1.1.1"
greenlet = "=3.0a1"
gunicorn = "21.2.0"
importlib-metadata = "6.8.0"
iniconfig = "2.0.0"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
markupsafe = "2.1.3"
packaging = "23.1"
pluggy = "1.2.0"
promise = "2.3"
pytest = "7.4.0"
six = "1.16.0"
tomli = "2.0.1"
typing-extensions = "4.7.1"
werkzeug = "2.3.6"
zipp = "3.16.2"
zope-event = "5.0"
zope-interface = "6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
